# sunysnacks

./: .gitignore  Dockerfile  README.md  app.py  argoReviewPage.css  argoTeaReview.html  argoteaLeaveReview.css  create.css  database.db  locations_init.json  login.css  login.html  map.css  map.html  menu.css  menu.html  millsLeaveReview.css  millsLeaveReview.html  millsReview.css  millsReview.html  pyproject.toml  script.js  style.css
flaskr/: auth.py  creds.sql  db.py
flaskr/static/styles/: login.css  menu.css
flaskr/templates/: menu.html
flaskr/templates/createR/: wilsLeaveReview.html
flaskr/templates/reviewP/: argoReviewPage.html  marketReviewPage.html  millsReviewPage.html  wilsReviewPage.html
instance/: flaskr.sqlite
pages/: argoLeaveReview.html  argoReviewPage.html  create.html  login.html  map.html  marketLeaveReview.html  marketReview.html  menu.html  millsLeaveReview.html  millsReview.html  seasonsLeaveReview.html  seasonsReview.html  wilsLeaveReview.html  wilsReviewPage.html
py_src/: __init__.py  auth.py  blog.py  create_schema.sql  creds.sql  menu.py
py_src/flaskr/: __init__.py  blog.py  db.py
py_src/flaskr/static/styles/: create.css  login.css
py_src/flaskr/templates/: map.html
py_src/flaskr/templates/auth/: create.html  login.html
py_src/flaskr/templates/blog/: base_leaveReviews.html  base_reviews.html
py_src/flaskr/templates/createR/: argoLeaveReview.html  marketLeaveReview.html  millsLeaveReview.html  seasonsLeaveReview.html  wilsLeaveReview.html
py_src/flaskr/templates/reviewP/: seasonsReviewPage.html  wilsReviewPage.html
py_src/snacks/: auth.py  db.py  main.py  routes.py  users.py
py_src/static/: script.js
py_src/static/js/: menu.js  script.js
py_src/static/scripts/: map.js
py_src/static/styles/: LeaveReview.css  create.css  leave_review.css  login.css  map.css  menu.css  navbar.css  reviewPage.css  review_page.css
py_src/templates/: campus_map.html  create_review.html  map.html  menu.html  navbar.html  reviews.html
py_src/templates/auth/: create.html  login.html
py_src/templates/blog/: base_leaveReviews.html  base_leave_reviews.html  base_reviews.html
py_src/templates/createR/: argoLeaveReview.html  marketLeaveReview.html  millsLeaveReview.html  seasonsLeaveReview.html  wilsLeaveReview.html
py_src/templates/reviewP/: argoReviewPage.html  marketReviewPage.html  millsReviewPage.html  seasonsReviewPage.html  wilsReviewPage.html
py_tests/: test_db.py  test_routes.py
static/styles/: login.css  style.css
styles/: LeaveReview.css  argoLeaveReview.css  create.css  login.css  map.css  marketLeaveReview.css  marketReview.css  menu.css  reviewPage.css  seasonsLeaveReview.css  seasonsReview.css  wilsLeaveReview.css  wilsReviewPage.css
templates/: create.html  login.html  map.html  marketLeaveReview.html  wilsLeaveReview.html  wilsReviewPage.html
