[project]
name = "sunysnacks"
version = "0.0.1"
description = "TBD"
authors = [
    { name = "Aston Evans", email = "findaston@gmail.com" }
]
dependencies = [
    "blinker==1.9.0",
    "click==8.1.7",
    "Flask==3.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "fastapi[standard]>=0.115.5",
    "pydantic>=2.10.2",
    "sqlmodel>=0.0.22",
]
readme = "README.md"
requires-python = ">= 3.9"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.18.1",
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.4",
    "twine>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "py_src/flaskr",
]

[tool.hatch.build.targets.sdist]
include = [
    "py_src/flaskr",
]
