[project]
name = "sunysnacks"
version = "0.0.1"
description = "TBD"
authors = [
    { name = "Aston Evans", email = "findaston@gmail.com" }
]
dependencies = [
    "blinker==1.9.0",
    "click==8.1.7",
    "Flask==3.1.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "MarkupSafe==3.0.2",
    "Werkzeug==3.1.3",
    "fastapi[standard]>=0.115.5",
    "pydantic>=2.10.2",
    "sqlmodel>=0.0.22",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
    "typer>=0.9.0"
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
snacks-db = "snacks.db:cli"
sunyapp = "snacks.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.18.1",
    "nox>=2025.5.1",
    "pytest>=8.1.1",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.3.4",
    "twine>=5.0.0",
    "build>=1.0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["py_src/snacks"]

[tool.hatch.build.targets.sdist]
include = ["py_src/snacks"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["py_tests"]
pythonpath = ["py_src", "py_tests"]
filterwarnings = ["error"]
addopts = "--cov snacks --cov-report html:.reports/py/cov --cov-report term --random-order -p no:warnings -v"
pythonfiles = "test_*.py"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = []
ignore = ["E501"]  # line length violations
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]

[tool.ruff.lint.isort]
known-first-party = ["sunysnacks"]

[tool.ruff.lint.pylint]
max-args = 7